# libayatana-common

./: .build.yml  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  NEWS  README.md
data/: CMakeLists.txt  org.ayatana.common.gschema.xml
debian/: changelog  control  copyright  copyright.in  gir1.2-ayatanacommon-0.1.install  libayatana-common-dev.install  libayatana-common0.symbols  rules
debian/upstream/: metadata
po/: POTFILES.in  aa.po  af.po  am.po  an.po  ar.po  as.po  ast.po  ayatana-common.pot  az.po  be.po  bem.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  (+93 more)
src/: CMakeLists.txt  libayatana-common.pc.in  utils.c  utils.h
tests/: CMakeLists.txt  tst_utils.cpp  tst_utils.vala
